  overriding system messages to make them blank.
* (bug 48319) action=parse no longer returns an error if passed none of 'oldid',
  'pageid', 'page', 'title', and 'text' (e.g. if only passed 'summary'). A
  warning will instead be issued if 'title' is non-default, unless no props are
  requested.
* Special:Recentchangeslinked will now include upload log entries

=== API changes in 1.22 ===
* (bug 25553) The JSON output formatter now leaves forward slashes unescaped
  to improve human readability of URLs and similar strings. Also, a "utf8"
  option is now provided to use UTF-8 encoding instead of hex escape codes
  for most non-ASCII characters.
* (bug 46626) xmldoublequote parameter was removed. Because of a bug, the
  parameter has had no effect since MediaWiki 1.16, and so its removal is
  unlikely to impact existing clients.
* (bug 47216) action=query&meta=siteinfo&siprop=skins will now indicate which
  skin is the default and which are unusable (e.g. listed in $wgSkipSkins).
* (bug 25325) Added support for wlshow filtering (bots/anon/minor/patrolled)
  to action=feedwatchlist.
* WDDX formatted output will actually be formatted (and normal output will no
  longer be), and will no longer choke on booleans.
* action=opensearch no longer silently ignores the format parameter.
* action=opensearch now supports format=jsonfm.
* list=usercontribs&ucprop=ids will now include the parent revision id.
* BREAKING CHANGE: action=parse no longer returns all langlinks for the page
  with prop=langlinks by default. The new effectivelanglinks parameter will
  request that the LanguageLinks hook be called to determine the effective
  language links.
* BREAKING CHANGE: list=allpages, list=langbacklinks, and prop=langlinks do not
  apply the new LanguageLinks hook, and thus only consider language links
  stored in the database.
* (bug 47219) Allow specifying change type of Wikipedia feed items
* prop=imageinfo now allows setting iiurlheight without setting iiurlwidth